--- a/style.css
+++ b/style.css
@@ -354,6 +354,15 @@
             margin-top: 20px;
             color: #888;
         }
+.project-img {
+    width: 100%;
+    height: 200px;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
 
         @media (max-width: 768px) {
             .menu-btn {
